# solana-anchor-sveltekit-skeleton-starter

./: Anchor.toml  README.md  package-lock.json  package.json
app/: package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  vite.config.js
app/src/: app.html  app.postcss
app/src/lib/components/ui/: FormShell.svelte  Notification.svelte  NotificationList.svelte  PageShell.svelte
app/src/lib/components/wallet/: AnchorConnectionProvider.svelte  RequestAirdrop.svelte  SendTransaction.svelte  SignMessage.svelte
app/src/lib/idl/: solana_anchor_sveltekit_skeleton_starter.json  solana_anchor_sveltekit_skeleton_starter.ts
app/src/lib/stores/: balance-store.ts  workspace-store.ts
app/src/routes/: +layout.svelte  +layout.ts  +page.svelte
app/src/routes/basics/: +page.svelte
app/src/routes/pdas/: +page.svelte  +page.ts
programs/solana-anchor-sveltekit-skeleton-starter/: Cargo.toml
programs/solana-anchor-sveltekit-skeleton-starter/src/: lib.rs
tests/: solana-anchor-sveltekit-skeleton-starter.ts
